--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=ListaTareas
-spring.datasource.url=jdbc:mysql://${DB_HOST}/listaTareasApi
-spring.datasource.username=${DB_USER_MYSQL}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/lista_tareas_API
+spring.datasource.username=root
+spring.datasource.password=42664539
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
