--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,24 @@
 spring.application.name=ListaTareas
+server.address=0.0.0.0
 spring.datasource.url=jdbc:mysql://localhost:3306/lista_tareas_API
 spring.datasource.username=root
 spring.datasource.password=42664539
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.properties.hibernate.connection.charSet=utf8mb4
+spring.jpa.properties.hibernate.connection.characterEncoding=utf8mb4
+spring.jpa.properties.hibernate.connection.useUnicode=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.engine.jdbc.spi.SqlExceptionHelper=DEBUG
+api.security.secret=1234
